--- a/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.resx
+++ b/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MatchesNotFound" xml:space="preserve">
+    <value>Матчи не найдены</value>
+  </data>
+  <data name="MatchNotFound" xml:space="preserve">
+    <value>Матч не найден</value>
+  </data>
   <data name="PasswordIsWrong" xml:space="preserve">
     <value>Неправильный пароль</value>
   </data>
   <data name="PasswordNotEqualsPasswordConfirm" xml:space="preserve">
     <value>Пароли не совпадают</value>
+  </data>
+  <data name="TeamsAreEqual" xml:space="preserve">
+    <value>Команды не могут играть против друг друга</value>
   </data>
   <data name="UserAlreadyExist" xml:space="preserve">
     <value>Пользователь с такими данными уже существует</value>
