--- a/FootballMatchPredictor.Application/Resources/Success/SuccessMessage.resx
+++ b/FootballMatchPredictor.Application/Resources/Success/SuccessMessage.resx
@@ -123,6 +123,18 @@
   <data name="MatchDeleted" xml:space="preserve">
     <value>Матч успешно удалён</value>
   </data>
+  <data name="MatchUpdated" xml:space="preserve">
+    <value>Матч успешно обновлён</value>
+  </data>
+  <data name="TeamCreated" xml:space="preserve">
+    <value>Команда успешно создана</value>
+  </data>
+  <data name="TeamDeleted" xml:space="preserve">
+    <value>Команда успешно удалена</value>
+  </data>
+  <data name="TeamUpdated" xml:space="preserve">
+    <value>Команда успешно обновлена</value>
+  </data>
   <data name="UserDataUpdated" xml:space="preserve">
     <value>Данные пользователя успешно обновлены!</value>
   </data>
