--- a/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.resx
+++ b/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BetValuesNotFound" xml:space="preserve">
+    <value>Значения для ставок не найдены</value>
+  </data>
+  <data name="CoefficientNotFound" xml:space="preserve">
+    <value>Коэффициент не найден</value>
+  </data>
+  <data name="IncorrectAmount" xml:space="preserve">
+    <value>Сумма должна быть больше 1000 рублей!</value>
+  </data>
   <data name="MatchesNotFound" xml:space="preserve">
     <value>Матчи не найдены</value>
   </data>
