--- a/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.ru.resx
+++ b/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.ru.resx
@@ -123,6 +123,9 @@
   <data name="CoefficientNotFound" xml:space="preserve">
     <value>Коэффициент не найден</value>
   </data>
+  <data name="CoefficientsNotFound" xml:space="preserve">
+    <value>Коэффициенты не найдены</value>
+  </data>
   <data name="CountriesNotFound" xml:space="preserve">
     <value>Страны не найдены</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="InternalServerError" xml:space="preserve">
     <value>Внутренняя ошибка сервера</value>
+  </data>
+  <data name="MatchAlreadyExist" xml:space="preserve">
+    <value>Матч с такими данными уже существует</value>
   </data>
   <data name="MatchesNotFound" xml:space="preserve">
     <value>Матчи не найдены</value>
