--- a/FootballMatchPredictor.Application/Resources/Success/SuccessMessage.en.resx
+++ b/FootballMatchPredictor.Application/Resources/Success/SuccessMessage.en.resx
@@ -120,6 +120,12 @@
   <data name="BetCreated" xml:space="preserve">
     <value>Bet is successfully completed!</value>
   </data>
+  <data name="CoefficientDeleted" xml:space="preserve">
+    <value>Coefficient deleted</value>
+  </data>
+  <data name="CoefficientUpdated" xml:space="preserve">
+    <value>Coefficient updated</value>
+  </data>
   <data name="FundsWithdrawn" xml:space="preserve">
     <value>Funds were successfully withdrawn</value>
   </data>
@@ -152,5 +158,8 @@
   </data>
   <data name="UserDataUpdated" xml:space="preserve">
     <value>User data is successfully updated!</value>
+  </data>
+  <data name="UserDeleted" xml:space="preserve">
+    <value>User deleted</value>
   </data>
 </root>
