--- a/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.en.resx
+++ b/FootballMatchPredictor.Application/Resources/Error/ErrorMessage.en.resx
@@ -147,6 +147,9 @@
   <data name="MatchNotFound" xml:space="preserve">
     <value>Match is not found</value>
   </data>
+  <data name="MatchTeamsAreEqual" xml:space="preserve">
+    <value>Team cannot play against itself</value>
+  </data>
   <data name="PasswordIsWrong" xml:space="preserve">
     <value>Password is wrong</value>
   </data>
